<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
	
	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="64dp"
		android:background="#FF448AFF" >
		
		<TextView
			android:text="@string/donate_title"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:contentDescription="@string/app_name"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:textColor="@android:color/white"
			android:layout_marginTop="16dp"
			android:layout_marginLeft="6dp"
			android:layout_marginRight="6dp"
			android:layout_marginBottom="4dp" />
		
	</RelativeLayout>
	
	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginBottom="4dp"
        android:text="@string/donate_sum"
        android:textStyle="bold" />

    <Button
        android:id="@+id/donate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:background="@drawable/ic_donate"/>

</LinearLayout>
